# braveit-phonebook-cli-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: api.py  cli.py  logger.py  models.py  repository.py  storage.py  utils.py
tests/: test_api.py  test_models.py  test_storage.py  test_utils.py
